@startuml
left to right direction

' Phân biệt các phần logic rõ ràng
skinparam classAttributeIconSize 0

class roles {
    - id: string
    - name: string
    - description: string
    - created_at: date
    - created_by: string
    - updated_at: date
    - updated_by: string
    + get(): List<roles>
    + create(role: Role): Role
    + update(role: Role): Role
    + delete(id: string): void
    + search(keyword: string): List<roles>
    + findById(id: string): Role
    + findByName(name: string): Role
}

class users {
    - id: string
    - email: string
    - password: string
    - name: string
    - active: boolean
    - address: string
    - phone: string
    - otp: int
    - otp_validity: date
    - refresh_token: string
    - google_id: string
    - role_id: string
    - cart_id: string
    - created_at: date
    - created_by: string
    - updated_at: date
    - updated_by: string
    + get(): List<users>
    + create(user: User): User
    + update(user: User): User
    + search(keyword: string): List<users>
    + findById(id: string): User
    + findByEmail(email: string): User
    + findByPhone(phone: string): User
    + import(data: File): int
    + export(): File
}

class permissions {
    - id: string
    - name: string
    - module: string
    - method: string
    - api_path: string
    - description: string
    - created_at: date
    - created_by: string
    - updated_at: date
    - updated_by: string
    + get(): List<permissions>
    + create(permission: Permission): Permission
    + update(permission: Permission): Permission
    + delete(id: string): void
    + search(keyword: string): List<permissions>
    + findById(id: string): Permission
}

class role_permissions {
    - role_id: string
    - permission_id: string
}

' Mối quan hệ aggregation rõ hơn về mặt ý nghĩa
roles "1" o-- "*" users : assigns
roles "1" o-- "*" role_permissions : defines
permissions "1" o-- "*" role_permissions : maps

@enduml
